--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "prepare": "panda codegen",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
@@ -10,6 +11,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.0"
+    "@astrojs/react": "^2.2.1",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^2.10.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@pandacss/dev": "^0.9.0"
   }
 }
