--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.5.2",
     "@astrojs/react": "^2.2.1",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
